--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Default environment variables
-VITE_API_URL=crop-backend-api-b8byddeccga5cug5.centralindia-01.azurewebsites.net
+VITE_API_URL=https://crop-backend-api-b8byddeccga5cug5.centralindia-01.azurewebsites.net
 VITE_ENVIRONMENT=production
