Add crop disease detection frontend with Azure integration, enhanced UI, and JSON download functionality

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-# Default environment variables
-VITE_API_URL=https://crop-backend-api-b8byddeccga5cug5.australiacentral-01.azurewebsites.net
+# Default environment variables for Azure deployment
+VITE_API_URL=https://crop-backend-api-b8byddeccga5cug5.centralindia-01.azurewebsites.net
 VITE_ENVIRONMENT=production
+VITE_APP_NAME=Crop Disease Detection
